# VITAident

./: CMakeLists.txt  Makefile  README.md
common/: kernel.c  kernel.h  misc.c  misc.h  power.c  power.h  storage.c  storage.h  system.c  system.h
common/include/: app.h  kernel.h  net.h  power.h  regmgr.h  utils.h
common/source/: app.c  kernel.c  net.c  power.c  regmgr.c  utils.c
console/: CMakeLists.txt
console/include/: debugScreen.h
console/source/: main.c
gui/: CMakeLists.txt
gui/include/: SDL_helper.h  menus.h  touch.h
gui/source/: SDL_helper.c  main.c  menus.c  touch.c
include/: app.h  debugScreen.h  fs.h  graphics.h  kernel.h  log.h  menus.h  net.h  power.h  touch.h  utils.h
plugin/: kernel.c  kernel_exports.yml  plugin.h  sysroot.h  user.c  user_exports.yml
source/: app.c  font.c  fs.c  graphics.c  kernel.c  log.c  main.c  menus.c  net.c  power.c  utils.c
src/: Makefile  app.c  app.h  fs.c  fs.h  graphics.c  graphics.h  kernel.c  kernel.h  main.c  main.h  net.c  net.h  power.c  power.h  screenshot.c  screenshot.h  utils.c  utils.h
src/lib/: Makefile  SceVshBridge_SceVshBridge__vshSblAimgrGetConsoleId.S
